--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.4.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.10.2",
     "mdb-react-ui-kit": "^5.1.0",
